--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,26 @@
 <!doctype html>
 <html>
 <head>
+  <base href="/">
   <meta charset="UTF-8">
   <title>Angular 2 Universal Starter</title>
   <meta name="description" content="Angular 2 Universal">
   <meta name="keywords" content="Angular 2,Universal">
   <meta name="author" content="PatrickJS">
-  <meta name="viewport" content="width=device-width,minimum-scale=1">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,user-scalable=no">
 
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.heystitch.io/web/common/icons/apple-touch-icon.png?v=XBrel6QmB4">
+  <link rel="icon" type="image/png" href="https://cdn.heystitch.io/web/common/icons/favicon-32x32.png?v=XBrel6QmB4" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://cdn.heystitch.io/web/common/icons/favicon-16x16.png?v=XBrel6QmB4" sizes="16x16">
+  <link rel="manifest" href="https://cdn.heystitch.io/web/common/icons/manifest.json?v=XBrel6QmB4">
+  <link rel="mask-icon" href="https://cdn.heystitch.io/web/common/icons/safari-pinned-tab.svg?v=XBrel6QmB4" color="#3399ff">
+  <link rel="shortcut icon" href="https://cdn.heystitch.io/web/common/icons/favicon.ico?v=XBrel6QmB4">
+  <meta name="apple-mobile-web-app-title" content="Stitch">
+  <meta name="application-name" content="Stitch">
+  <meta name="msapplication-config" content="https://cdn.heystitch.io/web/common/icons/browserconfig.xml?v=XBrel6QmB4">
+  <meta name="theme-color" content="#ffffff">
 
-  <link rel="prerender" href="http://localhost:3000/lazy">
-  <link rel="preload" href="/assets/logo.png">
-  <base href="/">
+  <link rel="stylesheet" href="assets/css/framework.min.css">
 
 </head>
 <body>
