Refactor angular2-meta into meta setter service.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <base href="/">
   <meta charset="UTF-8">
-  <title>Stitch | Build your global dream team</title>
+  <title>Stitch</title>
   <meta name="description" content="Stitch helps the global community acheive its goals.">
   <meta name="author" content="Stitch">
   <meta name="viewport" content="width=device-width,minimum-scale=1,user-scalable=no">
