--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="assets/css/framework.min.css">
+  <link rel="stylesheet" href="assets/css/swiper.min.css">
 
 </head>
 <body>
