Update hash implementation.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
     Loading...
   </app>
 
-  <script async src="/main.bundle.js"></script>
+  <script src="/main.bundle.js"></script>
 </body>
 </html>
